# vscode-debug-book2-kubernetes

./: .dockerignore  .editorconfig  Dockerfile  deployment-deploy-b.yaml  docker-compose.yaml  go.mod  pyproject.toml  skaffold.yaml  tasks.py  test.py
client/: __main__.py  client.py
gisapp/: __main__.py  app.py
manifests/base/: a.yaml  b.yaml  c.yaml  front-app.yaml  intermediate-app.yaml  kustomization.yaml
manifests/cloudcode/: backend-app.yaml  intermediate-app.yaml  kustomization.yaml
manifests/cloudcode-attach/: b.yaml  backend-app.yaml  kustomization.yaml
manifests/debugpy/: intermediate-app.yaml  kustomization.yaml
proto/: __init__.py  gisapp.proto  gisapp_grpc.pb.go  gisapp_pb2.py
proto/github.com/74th/vscode-debug-book2/: gisapp.pb.go
